--- a/docs/style.css
+++ b/docs/style.css
@@ -13,6 +13,7 @@
 /* Text Resets */
 p, a, i, div, td, h1 {
     font-family: 'Lato', sans-serif;
+    line-height: 1.21;
 }
 
 p, h1 {
@@ -25,25 +26,26 @@ p, h1 {
 
 /* Text Styles */
 .person-name {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
+    line-height: 1.4rem;
     font-weight: 400;
     color: #000000;
 }
 
 .person-title {
-    font-size: 1rem;
+    font-size: 0.97rem;
     font-weight: 600;
     color: #76b72a;
 }
 
 .person-company {
-    font-size: 1rem;
+    font-size: 0.96rem;
     font-weight: 500;
     color: rgb(87, 87, 87);
 }
 
 .contact-text {
-    font-size: 0.97rem;
+    font-size: 0.90rem;
     color: rgb(87, 87, 87);
     margin-bottom: 4px;
 }
@@ -66,7 +68,7 @@ p, h1 {
 }
 
 .branding-tag {
-    font-size: 0.94rem;
+    font-size: 0.90rem;
     color: rgb(58, 58, 58);
     margin-bottom: 6px;
 }
@@ -76,7 +78,8 @@ p, h1 {
 }
 
 .footer-text {
-    font-size: 0.92rem;
+    font-size: 0.90rem;
+    line-height: 1.2rem;
 }
 
 .footer-text-sm {
@@ -92,7 +95,7 @@ p, h1 {
 }
 
 .wave-emoji {
-    font-size: 1.4rem;
+    font-size: 1.7rem;
     margin-right: 6px;
 }
 
@@ -119,23 +122,10 @@ p, h1 {
 }
 .footer-divider {
     width: 2px;
-    height: 32px;
+    height: 70%;
     background-color: #76b72a;
     margin: 0 10px;
     border-radius: 2px;
-}
-.hr-spacer {
-    /* background: #76b72a; */
-    /* background: linear-gradient(90deg, #76b72a 0%, white 100%); */
-    width: 200px;
-    height: 60px;
-    margin: 14px 0;
-    border-radius: 60% 0 0 0;
-    border-left: 3px solid #76b72a;
-    border-top: 3px solid #76b72a;
-    position: relative;
-    left: -10px;
-    display: none;
 }
 
 /* Util */
